<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:backgroundTint="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnVelocity"
        android:layout_width="243dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:background="#514E4E"
        android:backgroundTint="#14B3C8"
        android:backgroundTintMode="src_atop"
        android:text="@string/velocidad_inicial"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/btnVelocityFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnVelocityFinal"
        android:layout_width="249dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:background="#494545"
        android:backgroundTint="#14B3C8"
        android:backgroundTintMode="src_atop"
        android:text="@string/velocidad_final"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVelocity" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="195dp"
        android:layout_height="176dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log" />

</androidx.constraintlayout.widget.ConstraintLayout>