<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:backgroundTint="#32000000"
    android:backgroundTintMode="screen"
    tools:context=".MassActivity">

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/masa_2"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:text="@string/velocidad_final_2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName12"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/velocimetro" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/velocidad_inicial_2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/inicial" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:text="@string/velocidad_final_1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName10"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inicial" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:text="@string/velocidad_inicial_1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/velocimetro" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/ma1" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/masa_1"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName13"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/masfinal" />
</androidx.constraintlayout.widget.ConstraintLayout>